# stringleton

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: rust.yml
stringleton/: Cargo.toml  README.md  lib.rs
stringleton-dylib/: Cargo.toml  lib.rs
stringleton-registry/: Cargo.toml  lib.rs  registry.rs  site.rs  static_symbol.rs  symbol.rs
stringleton/tests/: basic.rs
tests/check-codegen/: Cargo.toml  main.rs
tests/dylib/: Cargo.toml  build.rs  lib.rs
tests/dylib/c-dynamic-library/: Cargo.toml  lib.rs
tests/dylib/dynamic-library/: Cargo.toml  lib.rs
tests/foreign-crate/: Cargo.toml  lib.rs
tests/foreign-crate-registry/: Cargo.toml  lib.rs
tests/foreign-crate/tests/: external_test.rs
