[workspace]
members = [
    "tests/dylib",
    "tests/dylib/dynamic-library",
    "tests/dylib/c-dynamic-library",
    "stringleton-dylib",
    "stringleton-registry",
    "stringleton",
]
default-members = ["stringleton", "stringleton-registry"]
resolver = "3"

[workspace.dependencies]
ctor = { version = "0.4.1", default-features = false }
linkme = "0.3.32"
serde = { version = "1.0.219" }
hashbrown = "0.15.2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
inline_always = "allow"
