[workspace]
members = [
    "stringleton-dylib",
    "stringleton-registry",
    "stringleton",
    "tests/dylib",
    "tests/dylib/dynamic-library",
    "tests/dylib/c-dynamic-library",
    "tests/check-codegen",
]
default-members = ["stringleton", "stringleton-registry"]
resolver = "3"

[workspace.dependencies]
ctor = { version = "0.6.3", default-features = false }
linkme = "0.3.32"
serde = { version = "1.0.219" }
hashbrown = "0.16.1"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
inline_always = "allow"
