[package]
name = "stringleton-dylib"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"
crate-type = ["dylib"]

[dependencies]
ctor.workspace = true
linkme.workspace = true
stringleton-registry = { path = "../stringleton-registry", default-features = false }

[features]
default = ["std"]
std = ["alloc", "stringleton-registry/std"]
alloc = ["stringleton-registry/alloc"]
debug-assertions = ["stringleton-registry/debug-assertions"]
serde = ["stringleton-registry/serde"]
critical-section = ["stringleton-registry/critical-section"]
race = ["stringleton-registry/race"]
spin = ["stringleton-registry/spin"]
