[package]
name = "stringleton-dylib"
version = "0.1.0"
edition = "2024"
authors = ["Simon Ask Ulsnes <simon@ulsnes.dk>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/simonask/stringleton"
homepage = "https://docs.rs/stringleton/latest/stringleton"
keywords = ["string", "interner", "intern", "str", "symbol", "caching"]
description = "Extremely fast string interning library (dylib support)"

[lib]
path = "lib.rs"
crate-type = ["dylib"]

[dependencies]
ctor.workspace = true
linkme.workspace = true
stringleton-registry = { path = "../stringleton-registry", default-features = false }

[features]
default = ["std"]
std = ["alloc", "stringleton-registry/std"]
alloc = ["stringleton-registry/alloc"]
debug-assertions = ["stringleton-registry/debug-assertions"]
serde = ["stringleton-registry/serde"]
critical-section = ["stringleton-registry/critical-section"]
spin = ["stringleton-registry/spin"]
