[package]
name = "stringleton-registry"
version = "0.2.1"
edition = "2024"
authors = ["Simon Ask Ulsnes <simon@ulsnes.dk>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/simonask/stringleton"
homepage = "https://docs.rs/stringleton/latest/stringleton"
keywords = ["string", "interner", "intern", "str", "symbol"]
description = "Helper crate for the stringleton crate"

[lib]
crate-type = ["rlib", "dylib"]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
hashbrown.workspace = true
# Using once_cell because `std::sync::OnceLock` is not available in no_std.
once_cell = { version = "1.21.1", optional = true, default-features = false }
serde = { workspace = true, optional = true }
spin = { version = "0.10.0", optional = true, default-features = false, features = [
    "rwlock",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
debug-assertions = []
serde = ["dep:serde"]
critical-section = ["once_cell/critical-section"]
spin = ["dep:spin"]
